build: updated controllers